--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: php
 php:
     - 5.3
-    - 5.4
+
 env:
-  - SYMFONY_VERSION=v2.0.10
-  - SYMFONY_VERSION=origin/2.0
+  - SYMFONY_VERSION=v2.0.13
   - SYMFONY_VERSION=origin/master
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install
 
+script: phpunit
