--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,10 +8,33 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         syntaxCheck="false">
+         syntaxCheck="false"
+         bootstrap="./vendor/autoload.php">
+
+    <!--
+		    <php>
+		        <ini name="intl.default_locale" value="en"/>
+            <server name="KERNEL_DIR" value="/Users/andrelambert/Sites/digitaalcv/app/" />
+		    </php>
+    -->
+
     <testsuites>
         <testsuite name="BestPractice Test Suite">
-            <directory>./Tests</directory>
+            <directory>./Tests/</directory>
         </testsuite>
     </testsuites>
+
+    <filter>
+        <!-- Ignore these for Code Coverage -->
+        <whitelist>
+            <directory>./</directory>
+            <exclude>
+                <directory>./Tests/</directory>
+                <directory>./Resources/</directory>
+                <directory>./DependencyInjection/</directory>
+                <directory>./vendor/</directory>
+            </exclude>
+        </whitelist>
+    </filter>
+
 </phpunit>
