--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 LilaBestPracticeBundle_homepage:
     pattern:  /hello/{name}
-    defaults: { _controller: LilaBestPracticeBundle:Default:index }
+    defaults: { _controller: LilaBestPracticeBundle:Default:homepage }
