--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
-.idea
-.DS_Store
+/.project
+/.buildpath
+/.settings/
+/composer.phar
+/vendor
+/nbproject
+
+*.tmp
+*.log*
+*.lock
+*.swp
+*.bak
+*.DS_Store
+.#*
+
 phpunit.xml
-composer.lock
-composer.phar
-vendor
+
+.vagrant
+Vagrantfile
+
